--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# macos
+.DS_Store
+
 # Prerequisites
 *.d
 
@@ -30,3 +33,13 @@
 *.exe
 *.out
 *.app
+
+# Cmake 
+CMakeCache.txt
+CMakeFiles
+CTestTestfile.cmake
+Makefile
+cmake_install.cmake
+
+# googletest
+lib
